--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,13 @@
     color: white;
 }
 
+#word-display {
+    font-family: 'Ubuntu Mono', monospace;
+    font-size: 2rem;
+    text-align: center;
+
+}
+
 #question {
     /*rules for question h2 text below*/
 }
