--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,22 @@
+body {
+    background-color: #000; 
+    color: #fff; 
+    font-family: 'Ubuntu Mono', monospace;
+    margin: 0;
+    padding: 0;
+
+}
 .navbar {
-    background-color: #ffffff; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    background-color: #111; 
+    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1); 
     border-radius: 8px;
     padding: 10px 20px;
 }
 .game-title {
-    font-family: 'Ubuntu Mono', monospace;
     font-size: 3rem;
     font-weight: 700;
     text-transform: uppercase;
-    color: #2c3e50;
+    color: #fff;
     letter-spacing: 2px;
 }
 .navbar-brand {
