--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,36 +19,34 @@ body {
     color: #fff;
     letter-spacing: 2px;
 }
-.navbar-brand {
-    font-size: 1.8rem; 
-    font-weight: 600; 
-    color: #5a5a5a;
-    text-align: center;
-    margin: 0 auto;
-    display: block;
-}
 
 .navbar button {
-    border-radius: 50px; 
+    border-radius: 50px;
+    background-color: #333;
+    color: #fff;
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .navbar button:hover {
-    background-color: #000000;
-    color: white;
+    background-color: #555;
     transform: scale(1.05);
 }
 .btn {
-    border-radius: 8px; 
-    padding: 10px 20px;
+    border: 2px solid #fff;
+    border-radius: 8px;
+    background-color: transparent;
+    color: #fff;
     font-size: 1rem;
     font-weight: 600;
     text-transform: uppercase;
+    padding: 10px 20px;
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
-.btn-secondary {
-    background-color: #313436;
-    color: white;
+
+.btn:hover {
+    background-color: #fff;
+    color: #000;
+    transform: scale(1.05);
 }
 
 #word-display {
