styled the modal to fit the theme of the website changed the cheat button color and its border styled the letters used font size so it can be more prominent  and added a button filter

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,29 @@ body {
     color: #fff;
     padding: 10px;
 }
+#cheat-button {
+    background-color: #ff5757;
+    border: 2px solid #fff;
+    color: #fff;
+}
+
+#letters-used {
+    font-size: 1.2rem;
+    color: #fff;
+}
+.modal-content {
+    background-color: #111;
+    color: #fff;
+    border: 2px solid #fff;
+}
+
+.modal-header, .modal-footer {
+    border: none;
+}
+
+.btn-close {
+    filter: invert(1); 
+}
 
 .rowbg {
     background-color: #222;
