--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ body {
     box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1); 
     border-radius: 8px;
     padding: 10px 20px;
+    text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
 }
 .game-title {
     font-size: 3rem;
