--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,9 @@ body {
     padding: 10px 20px;
     text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
 }
+.navbar:hover {
+    text-shadow: -1px 0 whitesmoke, 0 1px white, 1px 0 white, 0 -1px white;
+}
 .game-title {
     font-size: 3rem;
     font-weight: 700;
