--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,8 @@ body {
     background-color: #ff5757;
     border: 2px solid #fff;
     color: #fff;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+
 }
 
 #letters-used {
